# remolacha

./: README.md  example.rm  remolacha.cabal  remolacha.ll  stack.yaml  test1.rm  test2.rm  test3.rm
app/: Main.hs
src/: AST.hs  Compiler.hs  Validations.hs
test/: Spec.hs
test/input/: all_validation_pass.rm  duplicate_class.rm  duplicate_method.rm  duplicate_method_param_name.rm  duplicate_variable_name.rm  instance_variable_and_param_name.rm  not_existing_class.rm  test2.rm  test_compile.cpp  variable_not_initialized.rm
