name:                remolacha
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/remolacha#readme
license:             BSD3
license-file:        LICENSE
author:              Damian Lattenero and Federico Sawady
maintainer:          sawady.faso@gmail.com
copyright:           2017 Lattenero and Sawady
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Compiler, AST, Validations
  build-depends:       base >= 4.7 && < 5, 
                       lleca == 1.0.0.0,
                       containers,
                       mtl
                       
  default-language:    Haskell2010

executable remolacha-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , remolacha
                     , cmdargs
                     , process
                     , directory
                     
  default-language:    Haskell2010

test-suite remolacha-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , remolacha
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/remolacha
